--- a/pages/error404.htm
+++ b/pages/error404.htm
@@ -1,21 +1,12 @@
-title = "Autocuidados"
-url = "/autocuidados/:page?"
+title = "Error 404"
+url = "/error404"
 layout = "defecto"
 is_hidden = 0
-
-[blogPosts]
-pageNumber = "{{ :page }}"
-categoryFilter = "autocuidados"
-postsPerPage = 10
-noPostsMessage = "Autocuidado no encontrado"
-sortOrder = "published_at desc"
-categoryPage = "autocuidados"
-postPage = "autocuidado"
 ==
 <section id="lt-header" class="lt-section lt-section-fullwidth section">
   <div class="lt-container container">
     <div class="lt-content lt-header-content">
-      {% partial "pag-autocuidados/header" %}
+      {% partial "pag-error404/header" %}
     </div>
   </div>
 </section>
@@ -23,7 +14,7 @@ postPage = "autocuidado"
 <section id="lt-mainpage" class="lt-section section">
   <div class="lt-container container">
     <div class="lt-content lt-mainpage-content">
-      {% partial "pag-autocuidados/mainpage" %}
+      {% partial "pag-error404/mainpage" %}
     </div>
   </div>
 </section>
