--- a/pages/preguntafrecuente.htm
+++ b/pages/preguntafrecuente.htm
@@ -1,21 +1,16 @@
-title = "Autocuidados"
-url = "/autocuidados/:page?"
+title = "Pregunta Frecuente"
+url = "/preguntafrecuente/:slug?"
 layout = "defecto"
 is_hidden = 0
 
-[blogPosts]
-pageNumber = "{{ :page }}"
-categoryFilter = "autocuidados"
-postsPerPage = 10
-noPostsMessage = "Autocuidado no encontrado"
-sortOrder = "published_at desc"
-categoryPage = "autocuidados"
-postPage = "autocuidado"
+[blogPost]
+slug = "{{ :slug }}"
+categoryPage = "preguntafrecuente"
 ==
 <section id="lt-header" class="lt-section lt-section-fullwidth section">
   <div class="lt-container container">
     <div class="lt-content lt-header-content">
-      {% partial "pag-autocuidados/header" %}
+      {% partial "pag-preguntafrecuente/header" %}
     </div>
   </div>
 </section>
@@ -23,7 +18,7 @@ postPage = "autocuidado"
 <section id="lt-mainpage" class="lt-section section">
   <div class="lt-container container">
     <div class="lt-content lt-mainpage-content">
-      {% partial "pag-autocuidados/mainpage" %}
+      {% partial "pag-preguntafrecuente/mainpage" %}
     </div>
   </div>
 </section>
