--- a/pages/preguntasfrencuentes.htm
+++ b/pages/preguntasfrencuentes.htm
@@ -1,21 +1,21 @@
-title = "Autocuidados"
-url = "/autocuidados/:page?"
+title = "Preguntas Frencuentes"
+url = "/preguntasfrencuentes/:page?"
 layout = "defecto"
 is_hidden = 0
 
 [blogPosts]
 pageNumber = "{{ :page }}"
-categoryFilter = "autocuidados"
+categoryFilter = "preguntasfrecuentes"
 postsPerPage = 10
-noPostsMessage = "Autocuidado no encontrado"
+noPostsMessage = "Pregunta no encontrada"
 sortOrder = "published_at desc"
-categoryPage = "autocuidados"
-postPage = "autocuidado"
+categoryPage = "preguntasfrencuentes"
+postPage = "preguntafrecuente"
 ==
 <section id="lt-header" class="lt-section lt-section-fullwidth section">
   <div class="lt-container container">
     <div class="lt-content lt-header-content">
-      {% partial "pag-autocuidados/header" %}
+      {% partial "pag-preguntasfrecuentes/header" %}
     </div>
   </div>
 </section>
@@ -23,7 +23,7 @@ postPage = "autocuidado"
 <section id="lt-mainpage" class="lt-section section">
   <div class="lt-container container">
     <div class="lt-content lt-mainpage-content">
-      {% partial "pag-autocuidados/mainpage" %}
+      {% partial "pag-preguntasfrecuentes/mainpage" %}
     </div>
   </div>
 </section>
