Modificacion de Menu
Viernes 13 Enero 2017

--- a/pages/inicio.htm
+++ b/pages/inicio.htm
@@ -2,6 +2,10 @@ title = "Inicio"
 url = "/"
 layout = "defecto"
 is_hidden = 0
+
+[session]
+security = "all"
+==
 ==
 
 <section id="lt-slideshow" class="lt-section lt-section-fullwidth section">
