Afinación de Detalles 8 Marzo

--- a/pages/cuidador_cuenta.htm
+++ b/pages/cuidador_cuenta.htm
@@ -1,4 +1,4 @@
-title = "Cuenta"
+title = "Plataforma del Cuidador"
 url = "/cuidador/cuenta/:code?"
 layout = "defecto"
 is_hidden = 0
@@ -17,8 +17,8 @@ paramCode = "code"
           <div class="lt-parallax-content">
             <div class="valign-wrapper" style="height: 400px;">
               <div class="valign">
-                <h2 class="lt-title">Registro Cuidador</h2>
-                <p class="lt-subtitle flow-text">Bienvenido a nuestra plataforma</p>
+                <h2 class="lt-title">{{titulo}}</h2>
+                <p class="lt-subtitle flow-text">Bienvenido a nuestra red de cuidadores de pacientes postrados.</p>
               </div>
             </div>
           </div>
@@ -32,8 +32,7 @@ paramCode = "code"
 <section id="lt-mainpage" class="lt-section section cuenta">
   <div class="lt-container container">
     <div class="lt-content lt-mainpage-content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut semper ipsum, ut faucibus magna. Aenean in maximus sem, in tempus tortor. Sed pharetra nisl nisi, quis tincidunt leo suscipit eu. Maecenas tempor placerat erat, ut pellentesque sapien pharetra eu. Suspendisse id nulla non nunc hendrerit porttitor. Praesent eu enim in dolor scelerisque vestibulum quis nec tellus. Cras id nibh vitae quam lacinia scelerisque et at quam. Maecenas feugiat maximus ipsum, vel bibendum tellus faucibus ac.</p>
-          {% component "cuentaUsuario" %}
+        {% component "cuentaUsuario" %}
     </div>
   </div>
 </section>
