--- a/pages/eventos.htm
+++ b/pages/eventos.htm
@@ -1,4 +1,4 @@
-title = "eventos"
+title = "Eventos para el Cuidador"
 url = "/eventos/:page?"
 layout = "defecto"
 is_hidden = 0
@@ -18,12 +18,12 @@ eventoPage = "evento"
       <div class="lt-row row">
       <div class="lt-col col s12">
         <div class="lt-parallax-header parallax-container" style="height: 400px;">
-          <div class="lt-parallax parallax"><img src="{{ 'assets/img/pag/cuidador/header.jpg'|theme }}" alt="image"></div>
+          <div class="lt-parallax parallax"><img src="{{ 'assets/img/pag/eventos/header.jpg'|theme }}" alt="image"></div>
           <div class="lt-parallax-content">
             <div class="valign-wrapper" style="height: 400px;">
               <div class="valign">
-                <h2 class="lt-title">Registro Cuidador</h2>
-                <p class="lt-subtitle flow-text">Bienvenido a nuestra plataforma</p>
+                <h2 class="lt-title">Eventos para el Cuidador</h2>
+                <p class="lt-subtitle flow-text">Disfruta de los eventos que tenemos para t&iacute;.</p>
               </div>
             </div>
           </div>
@@ -37,8 +37,7 @@ eventoPage = "evento"
 <section id="lt-mainpage" class="lt-section section cuenta">
   <div class="lt-container container">
     <div class="lt-content lt-mainpage-content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut semper ipsum, ut faucibus magna. Aenean in maximus sem, in tempus tortor. Sed pharetra nisl nisi, quis tincidunt leo suscipit eu. Maecenas tempor placerat erat, ut pellentesque sapien pharetra eu. Suspendisse id nulla non nunc hendrerit porttitor. Praesent eu enim in dolor scelerisque vestibulum quis nec tellus. Cras id nibh vitae quam lacinia scelerisque et at quam. Maecenas feugiat maximus ipsum, vel bibendum tellus faucibus ac.</p>
-          {% component "eventos" %}
+        {% component "eventos" %}
     </div>
   </div>
 </section>
