Visualizacion de (auto)cuidados

--- a/pages/cuenta_cuidador.htm
+++ b/pages/cuenta_cuidador.htm
@@ -1,5 +1,5 @@
 title = "Plataforma del Cuidador"
-url = "/cuidador/cuenta/:code?"
+url = "/cuenta/cuidador/:code?"
 layout = "defecto"
 is_hidden = 0
 
