--- a/pages/evento.htm
+++ b/pages/evento.htm
@@ -21,7 +21,7 @@ slug = "{{ :slug }}"
               <div class="valign">
                 <h2 class="lt-title">{{ evento.titulo }}</h2>
                 <p class="lt-subtitle flow-text"><i class="material-icons">place</i> <a href="http://www.google.com/maps/search/{{ direccion }}" target="_blank"> {{ direccion }}</a></p>
-                <p class="lt-subtitle flow-text"><i class="material-icons">event</i> {{ fecha }}</p>
+                <p class="lt-subtitle flow-text"><i class="material-icons">event</i> {{ fecha }} <br/> <i class="material-icons">access_time</i> {{ hora }}</p>
               </div>
             </div>
           </div>
